RESOLVED FIXED63005
AudioContext noteGrainOn() method should not apply explicit windowing
https://bugs.webkit.org/show_bug.cgi?id=63005
Summary AudioContext noteGrainOn() method should not apply explicit windowing
Chris Rogers
Reported 2011-06-20 12:17:36 PDT
AudioContext noteGrainOn() method should not apply explicit windowing
Attachments
Patch (3.53 KB, patch)
2011-06-20 12:19 PDT, Chris Rogers
kbr: review+
Chris Rogers
Comment 1 2011-06-20 12:19:16 PDT
Chris Rogers
Comment 2 2011-06-20 12:28:06 PDT
The noteGrainOn() method currently applies a hard-coded amplitude envelope (window) to the portion of sound played. The specification and use cases require that the portion should be played back as is with no further processing. If an amplitude envelope is desired, then scheduled AudioParam changes on an AudioGainNode may be used.
Kenneth Russell
Comment 3 2011-06-21 14:26:45 PDT
Comment on attachment 97838 [details] Patch Was this just a temporary stopgap for demos? Anyway, its removal looks fine.
Chris Rogers
Comment 4 2011-06-21 14:29:22 PDT
The old implementation of hard-coded grain window was before the ability existed to apply high-resolution envelopes in an AudioGainNode. So yes, in a way, it was a stop-gap solution.
Chris Rogers
Comment 5 2011-06-22 13:18:10 PDT
Note You need to log in before you can comment on or make changes to this bug.