2011-06-22  Chris Rogers  <crogers@google.com>

Reviewed by Kenneth Russell.

        AudioContext noteGrainOn() method should not apply explicit windowing
        https://bugs.webkit.org/show_bug.cgi?id=63005

        No new tests since audio API is not yet implemented.

        * webaudio/AudioBufferSourceNode.cpp:
        (WebCore::AudioBufferSourceNode::readFromBuffer):
        * webaudio/AudioBufferSourceNode.h:


Canonical link: https://commits.webkit.org/78781@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89471 268f45cc-cd09-0410-ab3c-d52691b4dbfc